# FractalViewer

./: .gitmodules  CMakeLists.txt
src/: MainGame.cpp  MainGame.h  main.cpp
src/CUDA/: cudaManager.cu  cudaManager.cuh
